Added jumbotron with some text

--- a/yoga.html
+++ b/yoga.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="yoga.css">
 </head>
 
@@ -27,7 +28,20 @@
     </div>
   </div>
 
-  
+<div class="jumbotron">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h1> <span style="color:#ffc200">Training</span></h1>
+      </div>
+    <h1>MIND</h1>
+    <h1>BODY</h1>
+    <h1>SOUL</h1>
+  </div>
+  </div>
+</div>
+
 </body>
 
 </html>
