Added footer and its contents

--- a/yoga.html
+++ b/yoga.html
@@ -17,7 +17,7 @@
 
         <div class="col-md-10">
           <ul class="nav nav-tabs pull-right">
-            <li role="presentatin"><a href="#">About Us</a></li>
+            <li role="presentation"><a href="#">About Us</a></li>
             <li role="presentation"><a href="#">Our Services</a></li>
             <li role="presentation"><a href="#">Contact Us</a></li>
             <li role="presentation"><a href="#">Log In</a></li>
@@ -27,7 +27,7 @@
       </div>
     </div>
   </div>
- 
+
 <div class="jumbotron">
 
   <div class="container">
@@ -39,6 +39,24 @@
     <h1>BODY</h1>
     <h1>SOUL</h1>
   </div>
+  </div>
+</div>
+
+<div class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <p>Terms</p>        
+      </div>
+
+      <div class="col-md-4">
+        <p>Designed by <a href="#">@rachanaacharya</a></p>
+      </div>
+
+      <div class="col-md-4">
+        <p>&copy 2017 YogaName</p>
+      </div>
+    </div>
   </div>
 </div>
 
