Added links to About Us, title of the home page, and link to the designed by

--- a/yoga.html
+++ b/yoga.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
+
 <head>
+  <title>YogaCenterNameorSomething</title>
   <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="yoga.css">
@@ -17,7 +19,8 @@
 
         <div class="col-md-10">
           <ul class="nav nav-tabs pull-right">
-            <li role="presentation"><a href="#">About Us</a></li>
+            <li role="presentation"><a href="yoga.html">Home</a></li>
+            <li role="presentation"><a href="aboutus.html">About Us</a></li>
             <li role="presentation"><a href="#">Our Services</a></li>
             <li role="presentation"><a href="#">Contact Us</a></li>
             <li role="presentation"><a href="#">Log In</a></li>
@@ -28,37 +31,53 @@
     </div>
   </div>
 
-<div class="jumbotron">
+  <div class="jumbotron">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <h1> <span style="color:#ffc200">Training</span></h1>
-      </div>
-    <h1>MIND</h1>
-    <h1>BODY</h1>
-    <h1>SOUL</h1>
-  </div>
-  </div>
-</div>
-
-<div class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <p>Terms</p>        
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h1>
+            <span style="color:#ffc200">Training</span>
+          </h1>
+        </div>
       </div>
 
-      <div class="col-md-4">
-        <p>Designed by <a href="#">@rachanaacharya</a></p>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-1">
+          <h1>MIND</h1>
+        </div>
       </div>
 
-      <div class="col-md-4">
-        <p>&copy 2017 YogaName</p>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+          <h1>BODY</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 col-md-offset-3">
+        <h1>SOUL</h1>
+        </div>
       </div>
     </div>
-  </div>
 </div>
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <p>Terms</p>
+          </div>
+
+          <div class="col-md-4">
+            <p>Designed by <a href="https://github.com/racharya">@rachanaacharya</a></p>
+          </div>
+
+          <div class="col-md-4">
+            <p>&copy 2017 YogaName</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 </body>
 
