--- a/yoga.html
+++ b/yoga.html
@@ -3,9 +3,11 @@
 
 <head>
   <title>YogaCenterNameorSomething</title>
+
   <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="yoga.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -56,28 +58,28 @@
 
       <div class="row">
         <div class="col-md-4 col-md-offset-3">
-        <h1>SOUL</h1>
+          <h1>SOUL</h1>
         </div>
       </div>
     </div>
-</div>
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <p>Terms</p>
-          </div>
+  </div>
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p>Terms</p>
+        </div>
 
-          <div class="col-md-4">
-            <p>Designed by <a href="https://github.com/racharya">@rachanaacharya</a></p>
-          </div>
+        <div class="col-md-4">
+          <p>Designed by <a href="https://github.com/racharya">@rachanaacharya</a></p>
+        </div>
 
-          <div class="col-md-4">
-            <p>&copy 2017 YogaName</p>
-          </div>
+        <div class="col-md-4">
+          <p>&copy 2017 YogaName</p>
         </div>
       </div>
     </div>
+  </div>
 
 </body>
 
