Added link page to Our Services tab

--- a/yoga.html
+++ b/yoga.html
@@ -23,7 +23,7 @@
           <ul class="nav nav-tabs pull-right">
             <li role="presentation"><a href="yoga.html">Home</a></li>
             <li role="presentation"><a href="aboutus.html">About Us</a></li>
-            <li role="presentation"><a href="#">Our Services</a></li>
+            <li role="presentation"><a href="ourservices.html">Our Services</a></li>
             <li role="presentation"><a href="#">Contact Us</a></li>
             <li role="presentation"><a href="#">Log In</a></li>
           </ul>
