--- a/ourservices.html
+++ b/ourservices.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Our Services</title>
+  <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
   <link href='ourservices.css' rel='stylesheet'>
 </head>
 
@@ -15,15 +16,18 @@
 
         <div class="col-md-4">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/red-eye-photography/p1.jpg" class="img-responsive">
+          <h3>Beginner Level</h3>
         </div>
 
 
         <div class="col-md-4">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/red-eye-photography/p2.jpg" class="img-responsive">
+          <h3>Intermediate Level</h3>
         </div>
 
         <div class="col-md-4">
           <img src="https://s3.amazonaws.com/codecademy-content/projects/red-eye-photography/p3.jpg" class="img-responsive">
+          <h3>Advance Level</h3>
         </div>
 
       </div>
