Played with obsolete <center> tag and deleted it to keep the original code

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,8 +7,7 @@
 
 <body>
   <p>
-    <h3>Here is going to be all the information about us!!!
-      TO BE COMPLETED
+    <h3>Here is going to be all the information about us!!! TO BE COMPLETED
     </h3>
   </p>
 </body>
